--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.9.6",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
     "styled-components": "^5.3.5",
